:sparkles: save manifest of existing files for re-running

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ COMMUNITY_NAME="your-community"
 COOKIE_VALUE="xxx"
 
 # This is the name of the folder on disk it'll save files into. No need to change it.
+# Files in this directory will be overwritten on download.
 DOWNLOAD_DIR="./frontsteps_downloads"
 
 # Be nice, set this to around 1 second to avoid flooding the server.
