:pencil: improve docs clarity

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,8 @@ COMMUNITY_NAME="your-community"
 
 # Get this from your browser:
 #   - Log in to FRONTSTEPS at https://your-community.frontsteps.com
-#   - Open your browser console to the Network tab, navigate to a new FRONTSTEPS page, and find the cookie under Request Headers "Cookie" (make sure you choose "Copy Value" to get the full text)
-COOKIE_VALUE="xxx"
+#   - Open your browser console to the Network tab, navigate to a new FRONTSTEPS page, click on that network event to view details, and find the cookie under the Request Headers "Cookie". Make sure you choose "Copy Value" to get the full text. Below is an example of what it might look like, replacing "xxx" with a long string of random letters.
+COOKIE_VALUE="locale=en; last_fsc_user_login_url=xxx; User+Type=Resident"
 
 # This is the name of the folder on disk it'll save files into. No need to change it.
 # Files in this directory will be overwritten on download.
